--- a/css/style.css
+++ b/css/style.css
@@ -419,7 +419,7 @@ input::placeholder {
 
 /* Analytics Part CSS End */
 /* Footer Part css Start */
-#footerPart {
+/* #footerPart {
   padding: 145px 0;
 }
 .footer {
@@ -461,7 +461,7 @@ input::placeholder {
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
 } */
-.policyPart {
+/* .policyPart {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -475,7 +475,7 @@ input::placeholder {
   font-weight: 400;
   line-height: 180%;
   font-family: "Nunito", sans-serif;
-  text-transform: capitalize;
-} 
+  text-transform: capitalize; */
+}  */
 /* Footer Part css End */
 
